--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             </div>
         <div class="my-image">
-            <img src="./assests/image (1).jpg" alt="">
+            <img src="./image (1).jpg" alt="">
         </div>
     </section>
     
